2.00 2023-07-25
        - Default script is no longer 'piwik' but 'matomo'.
        This is true for both '.php' and '.js'.
          This can be changed using the configuration parameter 'script'.

1.00 2021-03-05
        - Improved documentation.
        - api_p is no longer considered experimental.
        - api_url is no longer considered experimental.

0.29 2021-02-21
        - Replaced sojolicio.us with sojolicious.example.

0.28 2021-01-28
        - Added experimental 'append' parameter.
        - Re-globalize _paq for later usage.

0.27 2019-12-06
        - Fixed bug where the 'secure' parameter was not respected.

0.26 2018-12-31
        - Fixed Mojo dependency.

0.25 2018-12-28
        - Added "piwik.api_p" method.
        - Make it possible to override dnt.
        - Added mock server.

0.24 2018-11-13
        - Added stash value "piwik.embed".

0.23 2018-11-07
        - Added piwik_tag 'as-script' and shortcut 'piwik'
          for track_script.

0.22 2018-11-01
        - Added missing meta spec version (manwar++).
        - Fixed Mojolicious dependency for nested helpers.

0.21 2018-10-29
        - Fix description of 'embed' flag
        - Deprecate piwik_api and piwik_api_url in favor of
          piwik->api and piwik->api_url
        - Fix permissions of text files.
        - Remove deprecated "Mojo::Transaction::success" call.

0.20 2018-03-04
        - Fix secure flag to accept https scheme when
          provided by URL.
        - Update link to ULD information.
        - Support https in case base URL is https.
        - Updated references to Matomo.

0.19 2016-07-21
        - Fixed support for Mojolicious 7.

0.18 2015-05-26
        - Updated to support new URL escaping in Mojolicious.

0.17 2015-04-18
        - Fixed dependency.

0.16 2015-04-18
        - Update for Mojolicious 6.

0.15 2014-08-18
        - Clear up documentation.

0.14 2014-06-04
        - Compatible with Mojolicious >= 5.0.

0.13 2014-04-11