@@ -90,6 +90,12 @@ C<append> - Additional tracking code, that is appended to the code
 generated by L</piwik_tag> and the C<track_script> of the piwik shortcut.
 B<Experimental!>
 
+=item
+
+C<script> - The name of the tracking script. Defaults to C<matomo>
+(ending with C<.js> or C<.php>), but was C<piwik> before.
+
+
 =back
 
 All parameters can be set either as part of the configuration
@@ -229,6 +235,8 @@ C<dnt> - Override the Do-Not-Track setting, in rare cases, this is required.
 
 =back
 
+C<send_image> is set to C<0> by default, but can be overwritten.
+
 C<idSite> is an alias of C<site_id> and C<idsite> and defaults to the id
 of the plugin registration.
 Some parameters are allowed to be array references instead of string values,
@@ -353,7 +361,7 @@ Piwik, especially if you are located in the European Union.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2012-2021, L<Nils Diewald|https://nils-diewald.de/>.
+Copyright (C) 2012-2023, L<Nils Diewald|https://nils-diewald.de/>.
 
 This program is free software, you can redistribute it and/or
 modify it under the terms of the Artistic License version 2.0.
