@@ -1,7 +1,8 @@
 2.00 2023-07-25
         - Default script is no longer 'piwik' but 'matomo'.
-        This is true for both '.php' and '.js'.
+          This is true for both '.php' and '.js'.
           This can be changed using the configuration parameter 'script'.
+        - Add 'send_image=0' parameter by default to tracking API.
 
 1.00 2021-03-05
         - Improved documentation.
